Ehrju-eai: update spring boot 4.1 and camel 4.22.0